Queue routing fixes